--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/*マスターに新要素を追加するフォーム*/
+.adding {
+    border: 1px solid #000000;
+    padding: 10px;
+    margin: 10px 30px 21px 10px;
+    display: flex;
+    flex-wrap:wrap;
+}
+
+input{
+    padding:5px;
+    margin:10px;
+    width:40%;
+}
