--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,11 +1,11 @@
-﻿body{
-    background-color: #eef;
+﻿
+body{
     padding : 5px;
 }
 
 #header {
     padding: 10px;
-    background-color: #eee;
+    background-color: #eef;
 }
 
 #header-title {
