--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,6 +1,11 @@
-﻿body{
-    padding: 24px;
+﻿body {
+    padding: 4px;
+    margin-top: 150px;
     text-align: center;
+}
+
+#home-title{
+    margin-bottom:200px;
 }
 
 .home-button {
